--- a/index.html
+++ b/index.html
@@ -109,6 +109,36 @@
         <p><strong>Automation Technician</strong> (Oct 2018–Jan 2023) - Emirates Flight Catering, Dubai</p>
         <p><strong>Technician</strong> (Dec 2014–Aug 2016) - IFCG, Jeddah</p>
     </section>
+    <section id="certifications">
+    <h2>Certifications</h2>
+    <ul>
+        <li>
+            <a href="certificates/lean-six-sigma-yellow-belt.pdf" target="_blank">
+                Lean Six Sigma Yellow Belt
+            </a>
+        </li>
+        <li>
+            <a href="certificates/lean-six-sigma-green-belt.pdf" target="_blank">
+                Lean Six Sigma Green Belt
+            </a>
+        </li>
+        <li>
+            <a href="certificates/lean-six-sigma-black-belt.pdf" target="_blank">
+                Lean Six Sigma Black Belt
+            </a>
+        </li>
+        <li>
+            <a href="certificates/nebosh-hsw.pdf" target="_blank">
+                NEBOSH Health and Safety at Work
+            </a>
+        </li>
+        <li>
+            <a href="certificates/iosh-managing-safely.pdf" target="_blank">
+                IOSH Managing Safely
+            </a>
+        </li>
+    </ul>
+</section>
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
