--- a/index.html
+++ b/index.html
@@ -106,30 +106,26 @@
         <h2>Certifications</h2>
         <ul>
             <li>
-                <a href="certificates/lean-six-sigma-yellow-belt.pdf" target="_blank">
+                <a href="lean-six-sigma-yellow-belt.pdf" target="_blank">
                     Lean Six Sigma Yellow Belt
                 </a>
             </li>
             <li>
-                <a href="certificates/lean-six-sigma-green-belt.pdf" target="_blank">
+                <a href="lean-six-sigma-green-belt.pdf" target="_blank">
                     Lean Six Sigma Green Belt
                 </a>
             </li>
             <li>
-                <a href="certificates/lean-six-sigma-black-belt.pdf" target="_blank">
+                <a href="lean-six-sigma-black-belt.pdf" target="_blank">
                     Lean Six Sigma Black Belt
                 </a>
             </li>
             <li>
-                <a href="certificates/nebosh-hsw.pdf" target="_blank">
-                    NEBOSH Health and Safety at Work
+                <a href="IOSH-MS-and-NEBOSH-HSW-certificates.pdf" target="_blank">
+                    IOSH Managing Safely (IOSH-MS) and NEBOSH Health and Safety at Work (NEBOSH-HSW)
                 </a>
             </li>
             <li>
-                <a href="certificates/iosh-managing-safely.pdf" target="_blank">
-                    IOSH Managing Safely
-                </a>
-            </li>
         </ul>
     </section>
     <!-- Experience Section -->
