--- a/index.html
+++ b/index.html
@@ -6,38 +6,68 @@
     <title>Amir Hussain Shaik - Portfolio</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             color: #333;
             line-height: 1.6;
+            background: linear-gradient(to bottom, #f4f6f8, #dfe6e9);
         }
         header {
-            background-color: #2c3e50;
+            background: url('header-bg.jpg') no-repeat center center/cover;
             color: #fff;
             text-align: center;
-            padding: 2rem 0;
+            padding: 3rem 1rem;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-        header h1 { margin: 0; font-size: 2.5rem; }
-        header p { margin: 0.5rem 0; font-size: 1.2rem; }
+        header h1 {
+            margin: 0;
+            font-size: 3rem;
+            text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+        }
+        header p {
+            margin: 0.5rem 0 0;
+            font-size: 1.4rem;
+        }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #34495e;
+            background-color: #2c3e50;
+            padding: 0.5rem 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         nav a {
             color: #fff;
             text-decoration: none;
-            padding: 1rem;
+            padding: 1rem 1.5rem;
+            transition: background 0.3s ease;
         }
-        nav a:hover { background-color: #2980b9; }
+        nav a:hover {
+            background-color: #34495e;
+            border-radius: 5px;
+        }
         section {
             padding: 2rem;
             margin: 1rem auto;
-            max-width: 900px;
-            border-bottom: 1px solid #ddd;
+            max-width: 1000px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
-        h2 { color: #2c3e50; }
+        section h2 {
+            color: #2c3e50;
+            border-bottom: 2px solid #2980b9;
+            padding-bottom: 0.5rem;
+            margin-bottom: 1rem;
+        }
+        .about img {
+            display: block;
+            margin: 1rem auto;
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+        }
         .skills ul, .projects ul {
             list-style: none;
             padding: 0;
@@ -47,6 +77,17 @@
             margin: 0.5rem 0;
             padding: 0.75rem;
             border-left: 5px solid #2980b9;
+            border-radius: 5px;
+        }
+        .certifications img {
+            width: 100px;
+            height: auto;
+            margin: 0.5rem;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+        .certifications img:hover {
+            transform: scale(1.1);
         }
         footer {
             text-align: center;
@@ -71,11 +112,13 @@
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
+        <a href="#certifications">Certifications</a>
         <a href="#contact">Contact</a>
     </nav>
     <!-- About Section -->
-    <section id="about">
+    <section id="about" class="about">
         <h2>About Me</h2>
+        <img src="your-photo.jpg" alt="Amir Hussain Shaik">
         <p>
             I am Amir Hussain Shaik, a professional Electrical Engineer with 9+ years of expertise in electro-mechanical systems, industrial automation, and Lean Six Sigma. I have successfully led installations, troubleshooting, and maintenance activities for material handling systems, conveyor systems, and automation projects across Saudi Arabia, UAE, and India.
         </p>
@@ -102,30 +145,15 @@
             <li><strong>Car Turntable Maintenance</strong> - Conducted preventive maintenance for premium private villa clients in Riyadh.</li>
         </ul>
     </section>
-            <section id="certifications">
+    <!-- Certifications Section -->
+    <section id="certifications">
         <h2>Certifications</h2>
-        <ul>
-            <li>
-                <a href="lean-six-sigma-yellow-belt.pdf" target="_blank">
-                    Lean Six Sigma Yellow Belt
-                </a>
-            </li>
-            <li>
-                <a href="lean-six-sigma-green-belt.pdf" target="_blank">
-                    Lean Six Sigma Green Belt
-                </a>
-            </li>
-            <li>
-                <a href="lean-six-sigma-black-belt.pdf" target="_blank">
-                    Lean Six Sigma Black Belt
-                </a>
-            </li>
-            <li>
-                <a href="IOSH-MS-and-NEBOSH-HSW-certificates.pdf" target="_blank">
-                    IOSH Managing Safely (IOSH-MS) and NEBOSH Health and Safety at Work (NEBOSH-HSW)
-                </a>
-            </li>
-        </ul>
+        <div class="certifications">
+            <img src="certificate-1.jpg" alt="Lean Six Sigma Yellow Belt">
+            <img src="certificate-2.jpg" alt="Lean Six Sigma Green Belt">
+            <img src="certificate-3.jpg" alt="Lean Six Sigma Black Belt">
+            <img src="certificate-4.jpg" alt="IOSH-MS and NEBOSH-HSW">
+        </div>
     </section>
     <!-- Experience Section -->
     <section id="experience">
@@ -134,7 +162,7 @@
         <p><strong>Automation Technician</strong> (Oct 2018–Jan 2023) - Emirates Flight Catering, Dubai</p>
         <p><strong>Technician</strong> (Dec 2014–Aug 2016) - IFCG, Jeddah</p>
     </section>
-        <!-- Contact Section -->
+    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
         <p><strong>Email:</strong> <a href="mailto:amirhussain462@gmail.com">amirhussain462@gmail.com</a></p>
