Updated about section

--- a/index.html
+++ b/index.html
@@ -116,12 +116,25 @@
         <a href="#contact">Contact</a>
     </nav>
     <!-- About Section -->
-    <section id="about" class="about">
-        <h2>About Me</h2>
-        <img src="your-photo.jpg" alt="Amir Hussain Shaik">
-        <p>
-            I am Amir Hussain Shaik, a professional Electrical Engineer with 9+ years of expertise in electro-mechanical systems, industrial automation, and Lean Six Sigma. I have successfully led installations, troubleshooting, and maintenance activities for material handling systems, conveyor systems, and automation projects across Saudi Arabia, UAE, and India.
-        </p>
+    <section id="about" style="text-align: center; padding: 2rem;">
+    <div style="display: inline-block; position: relative;">
+        <!-- Profile Photo -->
+        <img src="your-photo.jpg" alt="Amir Hussain Shaik" 
+             style="width: 150px; height: 150px; border-radius: 50%; 
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);">
+        <!-- Decorative Ring -->
+        <div style="position: absolute; top: -10px; left: -10px; 
+                    width: 170px; height: 170px; border: 3px dashed #2980b9; 
+                    border-radius: 50%; z-index: -1;"></div>
+    </div>
+    <!-- About Text -->
+    <h2 style="margin-top: 1rem; color: #2c3e50;">About Me</h2>
+    <p style="max-width: 700px; margin: 1rem auto; font-size: 1.1rem;">
+        I am Amir Hussain Shaik, a professional Electrical Engineer with 9+ years 
+        of experience in automation and electro-mechanical systems. I specialize in 
+        material handling, Lean Six Sigma methodologies, and troubleshooting across 
+        Saudi Arabia, UAE, and India.
+    </p>
     </section>
     <!-- Skills Section -->
     <section id="skills">
