Updated certification section

--- a/index.html
+++ b/index.html
@@ -159,15 +159,43 @@
         </ul>
     </section>
     <!-- Certifications Section -->
-    <section id="certifications">
-        <h2>Certifications</h2>
-        <div class="certifications">
-            <img src="certificate-1.jpg" alt="Lean Six Sigma Yellow Belt">
-            <img src="certificate-2.jpg" alt="Lean Six Sigma Green Belt">
-            <img src="certificate-3.jpg" alt="Lean Six Sigma Black Belt">
-            <img src="certificate-4.jpg" alt="IOSH-MS and NEBOSH-HSW">
+    <section id="certifications" style="text-align: center;">
+    <h2 style="color: #2c3e50;">Certifications</h2>
+    <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px;">
+        <!-- Certificate 1 -->
+        <div>
+            <a href="lean-six-sigma-yellow-belt.pdf" target="_blank" download>
+                <img src="cert-yellow-belt.jpg" alt="Lean Six Sigma Yellow Belt" 
+                     style="width: 200px; height: auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);">
+            </a>
+            <p>Lean Six Sigma Yellow Belt</p>
         </div>
-    </section>
+        <!-- Certificate 2 -->
+        <div>
+            <a href="lean-six-sigma-green-belt.pdf" target="_blank" download>
+                <img src="cert-green-belt.jpg" alt="Lean Six Sigma Green Belt" 
+                     style="width: 200px; height: auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);">
+            </a>
+            <p>Lean Six Sigma Green Belt</p>
+        </div>
+        <!-- Certificate 3 -->
+        <div>
+            <a href="lean-six-sigma-black-belt.pdf" target="_blank" download>
+                <img src="cert-black-belt.jpg" alt="Lean Six Sigma Black Belt" 
+                     style="width: 200px; height: auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);">
+            </a>
+            <p>Lean Six Sigma Black Belt</p>
+        </div>
+        <!-- Certificate 4 -->
+        <div>
+            <a href="IOSH-MS-and-NEBOSH-HSW-certificates.pdf" target="_blank" download>
+                <img src="cert-iosh-nebosh.jpg" alt="IOSH and NEBOSH Certificates" 
+                     style="width: 200px; height: auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);">
+            </a>
+            <p>IOSH & NEBOSH Certificates</p>
+       	   </div>
+   		</div>
+	</section>
     <!-- Experience Section -->
     <section id="experience">
         <h2>Professional Experience</h2>
