--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
         <h3>Kardex Electrical Sorting System</h3>
         <p>Successfully installed a high-capacity material sorting machine in Abu Dhabi.</p>
         <div class="project-images">
-            <img src="images/kardex1.jpg" alt="Kardex System Image 1">
-            <img src="images/kardex2.jpg" alt="Kardex System Image 2">
-            <img src="images/kardex3.jpg" alt="Kardex System Image 3">
+            <img src="kardex1.jpg" alt="Kardex System Image 1">
+            <img src="kardex2.jpg" alt="Kardex System Image 2">
+            <img src="kardex3.jpg" alt="Kardex System Image 3">
         </div>
     </div>
     <!-- Project 2 -->
