--- a/index.html
+++ b/index.html
@@ -182,25 +182,38 @@
         <a href="#contact">Contact</a>
     </nav>
     <!-- About Section -->
-    <section id="about" style="text-align: center; padding: 2rem;">
-    <div style="display: inline-block; position: relative;">
-        <!-- Profile Photo -->
-        <img src="your-photo.jpg" alt="Amir Hussain Shaik" 
-             style="width: 150px; height: 150px; border-radius: 50%; 
-                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);">
-        <!-- Decorative Ring -->
-        <div style="position: absolute; top: -10px; left: -10px; 
-                    width: 170px; height: 170px; border: 3px dashed #2980b9; 
-                    border-radius: 50%; z-index: -1;"></div>
-    </div>
-    <!-- About Text -->
-    <h2 style="margin-top: 1rem; color: #2c3e50;">About Me</h2>
-    <p style="max-width: 700px; margin: 1rem auto; font-size: 1.1rem;">
-        I am Amir Hussain Shaik, a professional Electrical Engineer with 9+ years 
-        of experience in automation and electro-mechanical systems. I specialize in 
-        material handling, Lean Six Sigma methodologies, and troubleshooting across 
-        Saudi Arabia, UAE, and India.
-    </p>
+    <section id="about" class="about-section">
+    <div class="about-container">
+        <!-- About Content -->
+        <div class="about-content">
+            <h2>About Me</h2>
+            <p>
+                I am a dedicated <strong>Automation & Electrical Engineer</strong> with over 
+                <strong>5 years of experience</strong> delivering cutting-edge solutions across 
+                automation, electrical systems, and material handling projects. My expertise 
+                spans installations, diagnostics, and system optimization, ensuring streamlined 
+                performance and operational excellence.
+            </p>
+            <p>
+                Working with leading organizations in the UAE and Saudi Arabia, I have led projects 
+                ranging from <em>automated car parking solutions</em> and <em>car turntable installations</em> 
+                to <em>conveyor systems</em> and material sorting machines. I bring a results-driven 
+                approach to every project, leveraging <strong>Lean Six Sigma</strong> principles 
+                to enhance efficiency, reduce downtime, and meet stringent safety standards.
+            </p>
+            <p>
+                My passion lies in integrating innovative technologies with robust engineering 
+                practices to transform challenges into success stories. Whether it's leading 
+                cross-functional teams, troubleshooting complex systems, or training professionals, 
+                I take pride in delivering exceptional results that exceed client expectations.
+            </p>
+            <p><strong>Let's connect to create solutions that matter!</strong></p>
+        </div>
+        <!-- About Image -->
+        <div class="about-image">
+            <img src="images/about_me.jpg" alt="About Me" />
+         </div>
+      </div>
     </section>
     <!-- Skills Section -->
     <section id="skills">
