--- a/index.html
+++ b/index.html
@@ -60,14 +60,87 @@
             padding-bottom: 0.5rem;
             margin-bottom: 1rem;
         }
-        .about img {
-            display: block;
-            margin: 1rem auto;
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
+        /* About Section Styling */
+      .about-section {
+            background-color: #f9f9f9;
+            padding: 3rem 1.5rem;
+            font-family: 'Arial', sans-serif;
+            color: #333;
         }
+
+      .about-container {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1200px;
+            margin: 0 auto;
+            gap: 2rem;
+        }
+
+       /* About Text Content */
+       .about-content {
+            flex: 1 1 50%; /* Takes up 50% width */
+            max-width: 600px;
+        }
+
+       .about-content h2 {
+            color: #2980b9; /* Modern blue heading */
+            font-size: 2.2rem;
+            margin-bottom: 1rem;
+        }
+
+       .about-content p {
+            line-height: 1.6;
+            margin-bottom: 1rem;
+           font-size: 1.1rem;
+           color: #555;
+         }
+
+       .about-content strong {
+            color: #2c3e50;
+        }
+
+       .about-content em {
+            font-style: italic;
+            color: #7f8c8d;
+        }
+
+        /* About Image */
+        .about-image {
+            flex: 1 1 40%; /* Takes up 40% width */
+            max-width: 400px;
+         }
+
+         .about-image img {
+             width: 100%;
+             height: auto;
+             border-radius: 10px;
+             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+             object-fit: cover;
+             transition: transform 0.3s ease;
+          } 
+
+         .about-image img:hover {
+              transform: scale(1.05); /* Subtle zoom effect on hover */
+          }
+
+        /* Responsive Design */
+          @media (max-width: 768px) {
+        .about-container {
+              flex-direction: column;
+              text-align: center;
+          }
+
+         .about-content, .about-image {
+               flex: 1 1 100%;
+               max-width: 100%;
+          }
+
+          .about-content h2 {
+                font-size: 2rem;
+          }
+       }
         .skills ul, .projects ul {
             list-style: none;
             padding: 0;
