updated image section in about me

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
         <!-- About Image -->
         <div class="about-image">
-            <img src="images/about_me.jpg" alt="About Me" />
+            <img src="about_me.jpg" alt="About Me" />
          </div>
       </div>
     </section>
